# callbot-engine-hush

./: .gitignore  REFACTOR_PLAN.md  main.py  pyproject.toml  resources.yaml
.claude/: CLAUDE.md
agents/educa_reminder/: workflow.py
data/: response_templates.py
docs/: audio-vad-pipeline-spec.md  current-status.md  full-pipeline-spec.md  workflow-spec.md
ops/: build_intent_context.py  generate_rule.py  merge.py  state_transition.py
pipeline/: callbot.py  conversation_manager.py  mock_source.py
scripts/: bench_ccu.py  bench_components.py  bench_e2e_latency.py  bench_e2e_latency_async.py  bench_e2e_latency_sync.py  bench_latency.py  bench_llm_only.py  bench_stt_methods.py  compare_vad_v1_v2.py  profile_baseop_run.py  profile_framework_only.py  profile_vad_v2.py  test_audio_graph.py  test_nested_graph_streaming.py  test_nested_multi_yield.py  test_preprocess_impact.py  test_shared_ndarray.py  test_source_audio.py  test_source_audio_mockvad.py  test_source_audio_vad.py  test_source_only.py  test_state_leak.py  test_state_leak_v2.py  test_state_leak_v2_audio_only.py  test_stuck_error.py  test_vad_ccu.py  test_vad_v2_debug.py  test_vad_v2_shared_time.py  test_vad_v2_trace.py  test_ws_client.py
server/: call_logger.py  config.py  customer_store.py  http_server.py  ws_server.py
speech/: audio_processor.py  audio_processor_v2.py  denoise_classifier.py  pipeline.py  tts_synthesizer.py  vad_detector.py  vad_detector_v2.py
speech/tts/: __init__.py  cleaners.py  numbers_vi.py  symbols.py  vi-new-lexicon.txt  (+1 more)
tests/: test_workflow.py
workflows/: educa_reminder.py
(+15 files in other folders)
