[project]
name = "callbot-engine-hush"
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "hush-icore",
    "hush-providers",
    "hush-telemetry",
    "tritonclient[grpc]>=2.50",
    "onnxruntime>=1.24.3",
    "python-dotenv>=1.0",
    "scipy>=1.15.3",
    "soxr>=1.0.0",
    "unidecode>=1.4.0",
    "inflect>=7.0.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "python-multipart>=0.0.24",
]

[tool.uv.sources]
hush-icore = { path = "../Hush-ai/python/hush-icore", editable = true }
hush-providers = { path = "../Hush-ai/python/hush-providers", editable = true }
hush-telemetry = { path = "../Hush-ai/python/hush-telemetry", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
